feat: Few UI changes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artisan Foods - Traditional South Indian Podi Collection</title>
-    <meta name="description" content="Traditional South Indian Podi Business Management System" />
-    <meta name="author" content="Artisan Foods" />
+    <title>Artisan Delights</title>
+    <meta name="description" content="Traditional South Indian Podi's" />
+    <meta name="author" content="Artisan Delights" />
     <link rel="icon" href="/src/public/favicon.ico" type="image/x-icon">
 
-    <meta property="og:title" content="Artisan Foods - Traditional South Indian Podi Collection" />
-    <meta property="og:description" content="Traditional South Indian Podi Business Management System" />
+    <meta property="og:title" content="Artisan Delights - Traditional South Indian Podi Collection" />
+    <meta property="og:description" content="Traditional South Indian Podi's" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
