--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Artisan Delights</title>
     <meta name="description" content="Traditional South Indian Podi's" />
     <meta name="author" content="Artisan Delights" />
-    <link rel="icon" href="/src/public/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/src/public/favicon.png" type="image/x-icon">
 
     <meta property="og:title" content="Artisan Delights - Traditional South Indian Podi Collection" />
     <meta property="og:description" content="Traditional South Indian Podi's" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://artisan-delights.vercel.app/src/public/banner.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://artisan-delights.vercel.app/src/public/banner.png" />
   </head>
 
   <body>
