--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="Artisan Delights - Traditional South Indian Podi Collection" />
     <meta property="og:description" content="Traditional South Indian Podi's" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://artisan-delights.vercel.app/src/public/banner.png" />
+    <meta property="og:image" content="https://i.ibb.co/BH1F95wS/banner.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://artisan-delights.vercel.app/src/public/banner.png" />
+    <meta name="twitter:image" content="https://i.ibb.co/BH1F95wS/banner.png" />
   </head>
 
   <body>
