--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Artisan Delights</title>
     <meta name="description" content="Traditional South Indian Podi's" />
     <meta name="author" content="Artisan Delights" />
-    <link rel="icon" href="/src/public/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/public/favicon.png" type="image/x-icon">
 
     <meta property="og:title" content="Artisan Delights - Traditional South Indian Podi Collection" />
     <meta property="og:description" content="Traditional South Indian Podi's" />
