--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Artisan Delights</title>
     <meta name="description" content="Traditional South Indian Podi's" />
     <meta name="author" content="Artisan Delights" />
-    <link rel="icon" href="/public/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
 
-    <meta property="og:title" content="Artisan Delights - Traditional South Indian Podi Collection" />
+    <meta property="og:title" content="Artisan Delights - Traditional South Indian Podi's" />
     <meta property="og:description" content="Traditional South Indian Podi's" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://i.ibb.co/BH1F95wS/banner.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@dexorzo_dev" />
     <meta name="twitter:image" content="https://i.ibb.co/BH1F95wS/banner.png" />
   </head>
 
